--- a/src/app/add1/add1.component.css
+++ b/src/app/add1/add1.component.css
@@ -1,106 +1,17 @@
 
-/* Fixed sidenav, full height */
-.sidenav {
-    height: 100%;
-    width: 200px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow: hidden;
-    padding-top: 20px;
-	margin-top:80px;
-	
-}
-
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 20px;
-    color: #818181;
-    display: block;
-    border: none;
-    background: none;
-    width: 100%;
-    text-align: left;
-    cursor: pointer;
-    outline: none;
-}
-
-/* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
-    color: #f1f1f1;
-}
-
-/* Main content */
-.main {
-    margin-left: 200px; /* Same as the width of the sidenav */
-    font-size: 20px; /* Increased text to enable scrolling */
-    padding: 0px 10px;
-}
-
-/* Add an active class to the active dropdown button */
-.active {
-    background-color: green;
-    color: white;
-}
-
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-    display: none;
-    background-color: #262626;
-    padding-left: 8px;
-}
-
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-    float: right;
-    padding-right: 8px;
-}
-
-/* Some media queries for responsiveness */
-@media screen and (max-height: 450px) {
-    .sidenav.responsive{padding-top: 15px;position:relative;}
-    .sidenav.responsive a {font-size: 18px;float:1px;display:block;}
-
-}
-
-    
-@media (min-width: 768px) {
-  .navbar-nav.navbar-center {
-    position: absolute;
-    left: 50%;
-    transform: translatex(-50%);
-	
-  }
-}
-@media (max-width: 768px) {
-    .sidenav {
-        margin-left: -250px;
-    }
-    .sidenav.active {
-        margin-left: -500px;
-		
-		
-		
-    }
-}
 .nav-side-menu {
     overflow: auto;
     font-family: verdana;
     font-size: 12px;
     font-weight: 200;
-    background-color: #2e353d;
+    background-color: #6bc0e2;
     position: fixed;
-    top: 0px;
     width: 300px;
     height: 100%;
     color: #e1ffff;
   }
   .nav-side-menu .brand {
-    background-color: #23282e;
+    background-color: rgb(102, 198, 236);
     line-height: 50px;
     display: block;
     text-align: center;
@@ -108,14 +19,17 @@
   }
   .nav-side-menu .toggle-btn {
     display: none;
+    background: none;
   }
   .nav-side-menu ul,
   .nav-side-menu li {
     list-style: none;
-    padding: 0px;
+    padding: 2px;
     margin: 0px;
     line-height: 35px;
     cursor: pointer;
+    font-size: 12px;
+    
     /*    
       .collapsed{
          .arrow:before{
@@ -132,17 +46,16 @@
   }
   .nav-side-menu
   {
-      margin-top: 50px;
-      height: 100%;
+    height: 100%;
     width: 200px;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color:rgb(90, 185, 240);
     overflow: hidden;
-    padding-top: 20px;
-	margin-top:95px;
+    
+	
 	
   }
   .nav-side-menu ul :not(collapsed) .arrow:before,
@@ -154,8 +67,8 @@
   }
   .nav-side-menu ul .active,
   .nav-side-menu li .active {
-    border-left: 3px solid #d19b3d;
-    background-color: #4f5b69;
+    border-right: 3px solid #d19b3d;
+    background-color: #65b6ec;
   }
   .nav-side-menu ul .sub-menu li.active,
   .nav-side-menu li .sub-menu li.active {
@@ -167,7 +80,7 @@
   }
   .nav-side-menu ul .sub-menu li,
   .nav-side-menu li .sub-menu li {
-    background-color: #181c20;
+    background-color: #181f20;
     border: none;
     line-height: 40px;
     border-bottom: 1px solid #23282e;
@@ -186,8 +99,7 @@
   }
   .nav-side-menu li {
     padding-left: 0px;
-    border-left: 3px solid #2e353d;
-    border-bottom: 1px solid #23282e;
+    border-right: 3px solid #2e353d;
   }
   .nav-side-menu li a {
     text-decoration: none;
@@ -199,8 +111,8 @@
     padding-right: 20px;
   }
   .nav-side-menu li:hover {
-    border-left: 3px solid #d19b3d;
-    background-color: #4f5b69;
+    border-right: 3px solid #d19b3d;
+    background-color: #52b5e4;
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     -o-transition: all 1s ease;
@@ -212,6 +124,7 @@
       position: relative;
       width: 100%;
       margin-bottom: 10px;
+      display: block;
     }
     .nav-side-menu .toggle-btn {
       display: block;
@@ -242,14 +155,15 @@
   @media (max-width: 575px) {
     .nav-side-menu  {
       margin-top:0px;
+      display: block;
     }
   }
   
   
-  body {
-    margin: 0px;
-    padding: 0px;
+ 
+  img {
+    border-radius: 50%;
   }
-  .navbar{
-    background: linear-gradient(rgb(255, 252, 252),rgb(70, 68, 68));
-  }
+
+ 
+  
