--- a/src/app/productssale/productssale.component.html
+++ b/src/app/productssale/productssale.component.html
@@ -1,42 +1,167 @@
-<br>
-<div class="row hello">
-        <div class="col-sm-2"></div>
+
+<div class="row">
+        <div class="col-sm-3"></div>
         <div class="col-sm-8">
-            <form>
-                <div class="row">
-                    <div class="col-sm-4">
-                            <div class="form-group">
+                <div class="container">
+                        <h5>Create Appointement</h5>
+
+                        <div class="card">
+                                <div class="card-body">
+                                        <form>
+                                                <div class="row">
+                                                        <div class="col-sm-6">
+                                                          <div class="form-group">
+                                                                  <label for="name">FirstName <i style="color:red">*</i></label>
+                                                                  <input type="email" class="form-control" id="name" placeholder="Enter First Name" required>
+                                                                </div>
+                                          
+                                                        </div>
+                                  
+                                                        <div class="col-sm-6">
+                                                          <div class="form-group">
+                                                                  <label for="lname">LastName <i style="color:red">*</i></label>
+                                                                  <input type="text" class="form-control" id="lname"placeholder="Enter Last Name" required>
+                                                                </div>
+                                          
+                                                        </div>
+                                                </div>
+                                                  
+                                  
+                                                <div class="row">
+                                                  <div class="col-sm-6">
+                                                    <div class="form-group">
+                                                            <label for="email">Email <i style="color:red">*</i></label>
+                                                            <input type="text" class="form-control" id="email" placeholder="Enter Email" required>
+                                                          </div>
                                     
-                                    <input  placeholder="invoicenumber" name="emailAddress" class="form-control" id="emailAddress" required>
-                                  </div> 
-                    </div>
-                    <div class="col-4">
-                            <div class="form-group">
-                                    <input  placeholder="dd -mm -yy" name="emailAddress" class="form-control" id="emailAddress" required>
-                                  </div> 
-                    </div>
-                    <div class="col-sm-4">
-                            <div class="form-group">
-                                    <input  placeholder="suppliername" name="emailAddress" class="form-control" id="emailAddress" required>
-                                  </div> 
-                    </div>
+                                                  </div>
+                                  
+                                                  <div class="col-sm-6">
+                                                    <div class="form-group">
+                                                            <label for="pno">Phone number <i style="color:red">*</i></label>
+                                                            <input type="number" class="form-control" id="pno"placeholder="Enter phone Number" required>
+                                                          </div>
+                                    
+                                                  </div>
+                                          </div>
+                                  
+                                          <div class="row">
+                                                  <div class="col-sm-6">
+                                                    <div class="form-group">
+                                                            <label for="clinic">Clinic <i style="color:red">*</i></label>
+                                                            <select class="form-control" id="clinic">
+                                                                    <option value="">Select clinic</option>
+                                                            </select>
+                                                          </div>
+                                    
+                                                  </div>
+                                  
+                                                  <div class="col-sm-6">
+                                                    <div class="form-group">
+                                                            <label for="appo">Appointement Type </label>
+                                                            <select id="Appointement" id="appo" class="form-control">
+                                                                  <option value="">select Appointement Type</option>
+                                                          </select>
+                                                          </div>
+                                    
+                                                  </div>
+                                          </div>
+                                  
+                                  
+                                  
+                                  
+                                          <div class="row">
+                                                  <div class="col-sm-6">
+                                                    <div class="form-group">
+                                                            <label for="service">services <i style="color:red">*</i></label>
+                                                            <select class="form-control" id="service">
+                                                                    <option value="">select services</option>
+                                                            </select>
+                                                          </div>
+                                    
+                                                  </div>
+                                                  <div class="col-sm-2">
+                                                          <label>  </label>
+                                                          <div class="form-group">
+                                                                  
+                                                                <input placeholder="Hr" class="form-control">
 
-                </div>
-                <div class="row card card-body bg-light">
-                    <div class="col-sm-8 ">
-                            <input  placeholder="suppliername" name="emailAddress" class="form-control well" id="emailAddress" required>
-                    </div>
-                </div>
-             <br>
-            
-              <div class="text-center">
-              <button class="btn btn-success" (click)="createUser()" id="one" >GO</button>&nbsp;
-              <button  type="reset" class="btn btn-success"  id="one" >Clear</button>
+                                                          </div>
+                                                  </div>
+                                                  <div class="col-sm-2">
+                                                        <label>  </label>
+                                                        <div class="form-group">
+                                                              <input placeholder="Min"  class="form-control">
 
-              </div>
-            </form>
-        </div>
-        <div class="col-sm-2"></div>
-      
-      </div>
-      
+                                                  </div>
+
+                                          </div>
+                                          </div>
+                                          <h6 style="color:rgb(100, 183, 231)" class="text-center">Add other services</h6>
+                                  
+                                          <div class="row">
+                                                  <div class="col-sm-6">
+                                                    <div class="form-group">
+                                                            <label for="provider">Privider <i style="color:red">*</i></label>
+                                                            <select class="form-control" id="Provider">
+                                                                    <option value=""> select Provider</option>
+                                                            </select>
+                                                          </div>
+                                    
+                                                  </div>
+                                                  <div class="col-sm-6">
+                                                          <label for="date">Day & time <i style="color:red">*</i></label>
+                                  
+                                                          <input type="date" class="form-control">
+                                                  </div>
+                                          </div>
+                                         
+                                          
+                                          <div class="row">
+                                                  <div class="col-sm-12">
+                                                          <div class="form-group">
+                                                                  <label for="note">Note </label>
+                                                                  <input type="text" class="form-control" id="note" required>
+                                                                </div>
+                                    
+                                                  </div>
+                                          </div>
+                                  
+                                  
+                                  
+                                          <div class="row">
+                                                  <div class="col-sm-12">
+                                                          <div class="form-group">
+                                                                  <input type="checkbox" id="checkbox" name="vehicle1" value="Bike">
+                                                                  &nbsp;
+                                                                  <label for="checkbox">Allow double booking</label><br>
+                                                                
+                                                                </div>
+                                    
+                                                  </div>
+                                          </div>
+                                  
+                                          <div class="row">
+                                                  <div class="col-sm-12 text-center">
+                                                          <button type="button" class="btn btn-primary ">Save Appointement</button>
+                                                          &nbsp;
+                                                  <button type="button" class="btn btn-danger "> cancel</button>
+                                  
+                                                  </div>
+                                                          
+                                                  
+                                                  
+                                          </div>
+                                  
+                                                 
+                                              </form>
+                                          </div>
+                                          <div class="col-sm-1"></div>
+                                        
+                                        </div>
+                                  
+                                </div>
+                        </div>
+                </div>
+                
+           
